fixed overflow

--- a/style.css
+++ b/style.css
@@ -2,10 +2,13 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu');
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,800');
 
+body{
+  overflow: hidden;
+}
+
 .panel{
   width: 100%;
   min-height: 100%;
-  overflow: hidden;
   margin: 0;
 }
 
